--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "root/bt-api",
+    "name": "hhw2444/bt-api",
     "autoload": {
         "psr-4": {
             "Root\\BtApi\\": "src/"
